edit index, change background,...

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Pet Food Website Design Tutorial</title>
+    <title>Pet Shop</title>
 
+    <link rel="shortcut icon" href="image/pet_bg_2.jpg" type="image/x-icon">
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -23,10 +24,10 @@
 
     <nav class="navbar">
         <a href="#home">Trang chủ</a>
-        <a href="#about">Về chúng tôi</a>
-        <a href="#shop">Dịch vụ</a>
-        <a href="#services">Sản phẩm</a>
-        <a href="#plan">Chăm sóc</a>
+        <a href="#about">Thú cưng</a>
+        <a href="#shop">Đồ ăn</a>
+        <a href="#services">Phụ kiện</a>
+        <a href="#plan">Dịch vụ</a>
         <a href="#contact">Liên hệ</a>
     </nav>
 
@@ -59,8 +60,8 @@
 
 <section class="home" id="home">
 
-    <div class="content">
-        <h3> <span>hi</span> welcome to our pet shop </h3>
+    <div class="content" id="_text">
+        <h3> <span>hi !</span> welcome to our pet shop </h3>
         <a href="#" class="btn">shop now</a>
     </div>
 
@@ -70,23 +71,110 @@
 
 <!-- home section ends -->
 
-<!-- about section starts  -->
+<!-- shop section starts  -->
 
-<section class="about" id="about">
+<section class="shop" id="shop">
 
-    <div class="image">
-        <img src="image/about_img.png" alt="">
-    </div>
+    <h1 class="heading"> SẢN PHẨM <span> MỚI </span> </h1>
 
-    <div class="content">
-        <h3>premium <span>pet food</span> manufacturer</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum sint, dolore perspiciatis iure consequuntur eligendi quaerat vitae shaikh anas.</p>
-        <a href="#" class="btn">read more</a>
+    <div class="box-container">
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_01.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_02.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_03.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_04.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_05.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="image/product_06.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>air-dried food</h3>
+                <div class="amount"> $15.00 - $30.00 </div>
+            </div>
+        </div>
+
     </div>
 
 </section>
 
-<!-- about section ends -->
+<!-- shop section ends -->
+
 
 <!-- dog and cat food banner section starts -->
 
@@ -121,6 +209,24 @@
 </div>
 
 <!-- dog and cat food banner section ends -->
+
+<!-- about section starts  -->
+
+<section class="about" id="about">
+
+    <div class="image">
+        <img src="image/about_img.png" alt="">
+    </div>
+
+    <div class="content">
+        <h3>premium <span>pet food</span> manufacturer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum sint, dolore perspiciatis iure consequuntur eligendi quaerat vitae shaikh anas.</p>
+        <a href="#" class="btn">read more</a>
+    </div>
+
+</section>
+
+<!-- about section ends -->
 
 <!-- shop section starts  -->
 
@@ -385,7 +491,15 @@
 
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script>
+    let text = document.getElementById('_text');
 
+    window.addEventListener('scroll', function(){
+        let value = window.scrollY;
+
+        text.style.opacity = 50 + value + '%';
+    })
+</script>
+<script src="js/script.js"></script>
 </body>
 </html>
